Fix overflow bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,7 @@ body {
 }
 
 .screen {
+  display: none;
   width: 100vw;
   position: absolute;
   top: 0;
@@ -31,8 +32,9 @@ body {
   padding: 0.5rem;
 }
 
-.screen:not(.next-screen) {
+.previous-screen {
   transition: all 200ms ease-out;
+  display: block;
 }
 
 .container {
@@ -40,15 +42,18 @@ body {
   width: 100%;
   height: 100vh;
   margin: auto;
+  display: block
 }
 
 .current-screen {
   transform: translateX(0%);
   transition: all 200ms ease-out;
+  display: block
 }
 
 .next-screen {
   transform: translateX(-50%);
+  display: block;
 }
 
 canvas {
